freedink (1.08.20121232-1) UNRELEASED; urgency=low

  * New Upstream Version
  * Depend on fonts-liberation rather than on renamed ttf-liberation
    (Closes: #722357)
  * Bump compat to 9 to address lintian 'hardening-no-relro'
  * Bump Standards-Version to 3.9.4 (no changes)
  * Use XPM icon from src/ rather than duplicating it in debian/

 -- Sylvain Beucler <beuc@debian.org>  Sun, 20 Oct 2013 14:15:58 +0200

freedink (1.08.20121209-1) experimental; urgency=low

  * New Upstream Version (Closes: #688934)
  * Remove patch for install-reloc (integrated upstream)

 -- Sylvain Beucler <beuc@debian.org>  Sun, 09 Dec 2012 18:09:55 +0100

freedink (1.08.20120427-2) unstable; urgency=low

  * Update install-reloc (Closes: #671044)

 -- Sylvain Beucler <beuc@debian.org>  Wed, 2 May 2012 14:00:00 +0200

freedink (1.08.20120427-1) unstable; urgency=low

  * New Upstream Version
  * Upgrade packaging to debhelper 7 and source format 3.0 (quilt)
  * Update copyright file
  * Bump Standards-Version to 3.9.3
  * Update official webpage
  
 -- Sylvain Beucler <beuc@debian.org>  Fri, 27 Apr 2012 19:00:00 +0200

freedink (1.08.20101114-1) experimental; urgency=low

  * Precise licenses versions in debian/copyright, fixes
    copyright-refers-to-symlink-license lintian warning
  * Update copyright about new translations
  * Symlink 'freedink' documentation to 'freedink-engine' (requires
    debhelper >= 7.4.2)
  * Bump Standards-Version to 3.9.1
  * Update my email address in Uploaders

 -- Sylvain Beucler <beuc@debian.org>  Sun, 14 Nov 2010 00:59:28 +0100

freedink (1.08.20100420-1) unstable; urgency=low

  * New Upstream Version (Closes: #578444)
  * Add debian/source/format to document we're using source format 1.0 (to
    ease backports) and fix missing-debian-source-format lintian warning

 -- Sylvain Beucler <beuc@beuc.net>  Tue, 20 Apr 2010 22:19:58 +0200

freedink (1.08.20100321-1) unstable; urgency=low

  * New Upstream Version